# lm-turbo

./: .gitignore  AGENTS.md  CLAUDE.md  bench.py  main.py  native-qwen3.py  pyproject.toml  tmp_bench_variants.py  tmp_smoke_engine.py
benchmark/: profile_generate.py
tests/: test_mp.py  test_parallel_linear_weight_loader.py  test_qwen3_kvcache.py  test_vocab_paraller_embedding.py
turbo/: __init__.py  config.py  core.py  llm.py  qwen3.py  qwen3_v0.py  qwen3_v1.py
turbo/constant/: __init__.py  model.py
turbo/engine/: base.py  block_manager.py  core.py  model_runner.py  scheduler.py  sequence.py  vllm_engine.py
turbo/kvcache/: base.py
turbo/layers/: __init__.py  activation.py  attention.py  embedding.py  linear.py  mlp.py  norm.py  position.py  sampler.py
turbo/model/: config.py
turbo/models/: config.py
turbo/utils/: __init__.py  arch.py  hf.py  loader.py  log.py  misc.py  mp.py  registry.py  torch_utils.py  typing.py
