[project]
name = "lm-turbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.0.5",
    "flashinfer-cubin>=0.6.6",
    "flashinfer-python>=0.6.6",
    "huggingface-hub>=1.7.1",
    "jaxtyping>=0.3.9",
    "loguru>=0.7.3",
    "modelscope>=1.35.0",
    "msgpack>=1.1.2",
    "sgl-kernel>=0.3.21",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "triton>=3.6.0",
    "xxhash>=3.6.0",
    "zmq>=0.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "ruff>=0.11.0",
    "matplotlib>=3.10.5",
    "pyarrow",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "ruff>=0.11.0",
    "matplotlib>=3.10.5",
    "pyarrow",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
